2005-01-02  Jiri Malak  <Jiri.Malak@geac.cz>

	* include/winnt.h (GetCurrentFiber, GetFiberData): Make inline
	assembly code conditional on _X86_.

2005-01-02  Earnie Boyd  <earnie@users.sf.net>

	* include/w32api.h: Increment version.
	* Makefile.in: Ditto.
	* include/afxres.h: Remove the \r from the line ending.
	* include/errorrep.h: Ditto.
	* include/shldisp.h: Ditto.
	* include/tschema.h: Ditto.
	* lib/dhcpcsvc.def: Ditto.
	* lib/uxtheme.def: Ditto.
	* lib/wldap32.def: Ditto.

2005-01-01  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winerror.h (ERROR_EXE_CANNOT_MODIFY_STRONG_SIGNED_BINARY):
	Correct typo.
	Thanks to: Aidan France  <aidan1@users.sourceforge.net>

2004-12-29 Chris Sutcliffe <ir0nh34d@users.sourceforge.net>

	*include/winuser.h (MNS_*, WM_MENUCOMMAND,
	WM_MENUGETOBJECT, WM_MENUDRAG, WM_NCMOUSEHOVER,
	WM_NCMOUSELEAVE, WM_UNINITMENUPOPUP,
	SPI_GETFOREGROUNDLOCKTIMEOUT,
	SPI_SETFOREGROUNDLOCKTIMEOUT): Added definitions.
	*include/imm.h (WM_IME_REQUEST): Added definition.
	*include/shlobj.h (SLGP_RAWPATH,
	SLGP_UNCPRIORITY): Added definition.

2004-12-28 Chris Sutcliffe <ir0nh34d@users.sourceforge.net>

	*include/winuser.h (HSHELL_FLASH): Added definition.

2004-12-23  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/shldisp.h (IAutoComplete): Added interface definiton.
	* include/shldisp.h (IAutoComplete2): Added interface definiton.
	* include/shldisp.h (ACO_AUTOSUGGEST): Added definition.
	* include/shlobj.h (IObjMgr): Added interface definiton.
	* lib/shell32.c (CLSID_AutoComplete, IID_AutoComplete,
	IID_AutoComplete2, CLSID_ACLMulti, IID_IObjMgr,
	CLSID_ACListISF, IID_IACList): Added GUIDs.
	* include/shlguid.h (CLSID_AutoComplete, IID_AutoComplete,
	IID_AutoComplete2, CLSID_ACLMulti, IID_IObjMgr,
	CLSID_ACListISF, IID_IACList): Added GUIDs.

2004-12-23  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/commctrl.h (CDRF_NOTIFYSUBITEMDRAW): Add define.
	Thanks to: Chris Sutcliffe  <ironhead@walled.net>