@@ -1533,6 +1533,10 @@ extern "C" {
 #define CB_SETLOCALE 345
 #define CB_SETTOPINDEX 348
 #define CB_SHOWDROPDOWN 335
+#if (_WIN32_WINNT >= 0x0501)
+#define CB_SETMINVISIBLE 0x1701
+#define CB_GETMINVISIBLE 0x1702
+#endif
 #define CBN_CLOSEUP 8
 #define CBN_DBLCLK 2
 #define CBN_DROPDOWN 7
